-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
bvec_iter_page is expecting a biovecs list as a first argument, not a biovec. That works as long as there is only one biovec in the bio. If there is more than one, then invalid memory is dereferences since bvl is a single vector, not a list. This only affect 3.14+ kernels, where HAVE_BVEC_ITER is true. Don't use bvec_iter_page, but create the right macro to simply return the vector's bv_page. Bug introduced in commit 833b670a.